fix: hide previous and next arrows on mobile. Add top padding to bookmark list page

--- a/myreader-frontend/src/app/js/App.css
+++ b/myreader-frontend/src/app/js/App.css
@@ -43,6 +43,18 @@ input {
   width: 100%;
 }
 
+@media (max-width: 599px) {
+    .hidden-phone {
+        display: none;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 1279px) {
+    .hidden-tablet {
+        display: none;
+    }
+}
+
 /*
  Reference: https://tailwindcss.com/docs
  */
