--- a/myreader-frontend/src/app/js/pages/BookmarkListPage/BookmarkListPage.css
+++ b/myreader-frontend/src/app/js/pages/BookmarkListPage/BookmarkListPage.css
@@ -3,5 +3,5 @@
 }
 
 .my-bookmark-list__tags {
-    padding: 0 16px;
+    padding: 16px  16px 0 16px;
 }
